# eom

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  CLV.ipynb  Cargo.toml  GOY.ipynb  KSE.ipynb  README.md  SHE.ipynb  Swift-Hohenberg.ipynb  accuracy.ipynb  figure.py  wercker.yml
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: gh-pages.yml  rust.yml
benches/: ode.rs
examples/: accuracy.rs  bench.rs  clv.rs  goy_shell.rs  kse.rs  kse_lyapunov.rs  l63_accuracy.rs  lorenz63.rs  lyapunov.rs  roessler.rs  she.rs  swe.rs
lorenz63/: accuracy.ipynb
src/: adaptor.rs  diag.rs  explicit.rs  exponential.rs  goy_shell.rs  jacobian.rs  lib.rs  lorenz63.rs  lorenz96.rs  lyapunov.rs  main.rs  prelude.rs  roessler.rs  semi_implicit.rs  traits.rs
src/model/: goy_shell.rs  lorenz63.rs  lorenz96.rs  mod.rs  roessler.rs
src/ode/: goy_shell.rs  lorenz63.rs  lorenz96.rs  mod.rs  roessler.rs
src/pde/: kse.rs  mod.rs  she.rs  swe.rs
tests/: accuracy.rs  lyapunov.rs  pde.rs  precision.rs  view.rs
