[package]
name    = "eom"
version = "0.10.1-alpha.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description   = "Configurable ODE/PDE solver"
documentation = "https://docs.rs/eom/"
repository    = "https://github.com/termoshtt/eom"
keywords      = ["ndarray", "ode", "pde"]
categories    = ["algorithms", "science"]
license       = "MIT"
readme        = "README.md"

[features]
default   = ["intel-mkl"]
static    = ["ndarray-linalg/openblas",  "fftw/source"]
intel-mkl = ["ndarray-linalg/intel-mkl", "fftw/intel-mkl"]

[dependencies]
num-traits     = { version = "0.2",  default-features = false }
num-complex    = { version = "0.2",  default-features = false }
derive-new     = { version = "0.5",  default-features = false }
ndarray        = { version = "0.12", default-features = false }
ndarray-linalg = { version = "0.11",  default-features = false }
fftw           = { version = "0.6",  default-features = false }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "ode"
harness = false
