[package]
name    = "eom"
version = "0.10.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description   = "Configurable ODE/PDE solver"
documentation = "https://docs.rs/eom/"
repository    = "https://github.com/termoshtt/eom"
keywords      = ["ndarray", "ode", "pde"]
categories    = ["algorithms", "science"]
license       = "MIT"
readme        = "README.md"

[features]
default   = []
oss       = ["ndarray-linalg/openblas-static",  "fftw/source"]
intel-mkl = ["ndarray-linalg/intel-mkl-static", "fftw/intel-mkl"]

[dependencies]
num-traits  = { version = "0.2.14", default-features = false }
num-complex = { version = "0.3.1", default-features = false }
derive-new  = { version = "0.5.9", default-features = false }
ndarray     = { version = "0.14.0", default-features = false }
fftw        = { version = "0.7.0", default-features = false }

[dependencies.ndarray-linalg]
version = "0.13.0"
default-features = false

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "ode"
harness = false

[profile.release]
debug = true
