[package]
name    = "eom"
version = "0.10.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description   = "Configurable ODE/PDE solver"
documentation = "https://docs.rs/eom/"
repository    = "https://github.com/termoshtt/eom"
keywords      = ["ndarray", "ode", "pde"]
categories    = ["algorithms", "science"]
license       = "MIT"
readme        = "README.md"

[features]
default   = []
oss       = ["ndarray-linalg/openblas-static",  "fftw/source"]
intel-mkl = ["ndarray-linalg/intel-mkl-static", "fftw/intel-mkl"]

[dependencies]
num-traits  = { version = "0.2.15", default-features = false }
num-complex = { version = "0.4.3", default-features = false }
derive-new  = { version = "0.5.9", default-features = false }
ndarray     = { version = "0.15.6", default-features = false }
fftw        = { version = "0.8.0", default-features = false }

[dependencies.ndarray-linalg]
version = "0.16.0"
default-features = false

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "ode"
harness = false

[profile.release]
debug = true
